# Gerador-de-Boletos

./: .pre-commit-config.yaml  README.md  generate_data.py  generic_functions.py  pyproject.toml
gerador_de_boletos/: generate_data.py
gerador_de_boletos/utils/: generic_functions.py
